DROTH-2553 fix aligning

--- a/UI/src/less/site/action-panel.less
+++ b/UI/src/less/site/action-panel.less
@@ -664,23 +664,12 @@
       font-weight: bold;
       font-size: @font-size-base;
     }
-
-   .panel-legend{
-      .label {
-        > span {
-          width: 77%;
-          display: inline-block;
-        }
-
-        > img {
-          position: unset;
-          right: 10px;
-          left: unset;
-          width: auto;
-          float: right;
-          height:10px;
-        }
-      }
+    .label {
+      padding-bottom: 4px;
+    }
+    .symbol-to-right{
+      height: 20px;
+      width: 29px;
     }
 
     .roadway-0 { .linear-asset-legend-entry(@linear-asset-6, @linear-asset-6); }
